# go/model_link_data.go
@@ -24,17 +24,23 @@ type LinkData struct {
 
 	Votes int32 `json:"votes,omitempty"`
 
-	AddedBy string `json:"addedBy,omitempty"`
+	AddedBy AddTopic200ResponseNodeDataYoutubeLinksInnerAddedBy `json:"addedBy,omitempty"`
 
 	DateAdded time.Time `json:"dateAdded,omitempty"`
 }
 
 // AssertLinkDataRequired checks if the required fields are not zero-ed
 func AssertLinkDataRequired(obj LinkData) error {
+	if err := AssertAddTopic200ResponseNodeDataYoutubeLinksInnerAddedByRequired(obj.AddedBy); err != nil {
+		return err
+	}
 	return nil
 }
 
 // AssertLinkDataConstraints checks if the values respects the defined constraints
 func AssertLinkDataConstraints(obj LinkData) error {
+	if err := AssertAddTopic200ResponseNodeDataYoutubeLinksInnerAddedByConstraints(obj.AddedBy); err != nil {
+		return err
+	}
 	return nil
 }
